lib/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D100_D.py.snap
---
source: src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    PublicModule: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 0
  fix: ~
  parent: ~

